--- a/src/style.css
+++ b/src/style.css
@@ -17,9 +17,16 @@ body {
   grid-gap: 64px;
 }
 
-.img-responsive {
-  max-width: 100%;
+.friends {
+  filter: brightness(80%) saturate(65%);
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.image-responsive {
+  width: 100%;
   display: block;
+  aspect-ratio: 1 / 1;
 }
 
 .grid-main {
@@ -34,9 +41,19 @@ body {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+
 .card {
   background: white;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  grid-gap: 0;
+  grid-template-columns: auto auto;
 }
 
 .card-body {
@@ -205,8 +222,15 @@ footer a {
   opacity: 0.7;
 }
 
-.friends {
-  filter: brightness(80%) saturate(65%);
+.footer-project {
+  text-align: center;
+  color: white;
+  opacity: 0.5;
+  margin: 50px;
+}
+
+.footer-project a {
+  color: white;
 }
 
 @media (max-width: 960px) {
@@ -233,5 +257,13 @@ footer a {
 
   section {
     padding: 30px 10px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    width: 100%;
   }
 }
